manifests/poi.yml
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  selector:
    app: poi
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
        - name: poi
          image: wabrezohcontainerregistry.azurecr.io/poi
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
