manifests/trips.yml
apiVersion: v1
kind: Service
metadata:
  name: trips
spec:
  selector:
    app: trips
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
        - name: trips
          image: wabrezohcontainerregistry.azurecr.io/trips
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
