manifests/tripviewer.yml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
spec:
  selector:
    app: tripviewer
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
        - name: tripviewer
          image: wabrezohcontainerregistry.azurecr.io/tripviewer
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
