manifests/userprofile.yml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
spec:
  selector:
    app: userprofile
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
spec:
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: wabrezohcontainerregistry.azurecr.io/userprofile
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
